# try-mcp-gateway

./: .env  Jenkinsfile  README.md  docker-compose.yml  mcp.db
first_try_mcp/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  config.yaml  config.yaml.example  pyproject.toml
first_try_mcp/src/config/: __init__.py  settings.py
first_try_mcp/src/servers/: __init__.py  http_server.py
first_try_mcp/src/tools/: __init__.py  base.py  dictionary.py  exchange_rate.py  ip_info.py  weather.py
first_try_mcp/src/utils/: __init__.py  exceptions.py  http_client.py  logger.py
first_try_mcp/tests/: test_tools.py
prometheus_grafana_fake_data/: .gitignore  00_START_HERE.md  Dockerfile  Dockerfile.prod  Makefile  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  VALIDATE.sh  config.yaml.example  pyproject.toml
prometheus_grafana_fake_data/data/apm/: metrics.yaml  traces.yaml
prometheus_grafana_fake_data/data/grafana/: dashboards.yaml  datasources.yaml
prometheus_grafana_fake_data/data/health_checks/: api_endpoints.yaml
prometheus_grafana_fake_data/data/performance/: apm_data.yaml  appl_area_metrics.yaml  server_metrics.yaml
prometheus_grafana_fake_data/data/prometheus/: alerts.yaml  metrics.yaml  targets.yaml
prometheus_grafana_fake_data/src/: __init__.py
prometheus_grafana_fake_data/src/config/: settings.py
prometheus_grafana_fake_data/src/data_loader/: __init__.py  loader.py
prometheus_grafana_fake_data/src/servers/: __init__.py  mcp_server.py
prometheus_grafana_fake_data/src/tools/: __init__.py  api_health_check.py  app_performance.py  application_logs.py  application_performance_inquiry.py  base.py  batch_logs.py  check_apm.py  interface_logs.py  server_performance.py
prometheus_grafana_fake_data/src/utils/: __init__.py  exceptions.py  helpers.py  logger.py
prometheus_grafana_fake_data/tests/: __init__.py  test_data_loader.py  test_tools.py
